name:                world
version:             0.1.0
synopsis:            Short description of your package
homepage:            https://github.com/ralphmorton/world#readme
license:             BSD3
license-file:        LICENSE
author:              Ralph Morton
maintainer:          ralphmorton@gmail.com
copyright:            2017 Ralph Morton
category:            IO
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/ralphmorton/world#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.World
                     , Control.Monad.World.Arbiter
                     , Control.Monad.World.Class
                     , Control.Monad.World.Exception
                     , Control.Monad.World.Record
                     , Control.Monad.World.Replay
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , stm
                     , time
                     , lens
                     , containers
                     , async
                     , random
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

source-repository head
  type:     git
  location: https://github.com/ralphmorton/world
